# kondo

./: .editorconfig  .gitignore  README.rst  app.py  pyproject.toml
kondo/: __init__.py  collection.py  detect_repository_type.py  get_repositories.py  main.py  plugin.py  plugin_registry.py
kondo/cli/: main.py
kondo/detector/: detect_language_type.py
kondo/github/: scraps.py
kondo/github_tools/: clone_repository.py  get_repository_list.py  scraps.py
kondo/room_engine/: __init__.py  condition.py  required_file.py  room.py  room_loader.py  rule.py  validate_repo.py
spots/python/: pyproject.toml
tests/: test_kondo.py
tests/detector/: test_detect_language_type.py
tests/fixtures/sample-terraform-room/: kondo.yml
tests/github/: test_get_repository_list.py
tests/github_tools/: test_clone_repository.py  test_get_repository_list.py
tests/room_engine/: test_room.py  test_room_loader.py  test_validate_repo.py
